<resources>
    <string name="app_name">SPU221 Android app</string>
    <string name="main_title">Base of Android</string>
    <string name="main_calc_button">Calculator</string>
    <string name="main_anim_button">Animation</string>

    <!--region Animation-->
    <string name="anim_title">Animation</string>
    <!--endregion-->


    <!--region Calculator-->
    <!--messages-->
    <string name="calc_msg_max_digits">Max digit is use</string>
    <string name="calc_msg_two_dots">Only one dot can be</string>
    <string name="calc_msg_minus_zero">Zero not chang sign</string>
    <string name="calc_msg_two_sign">Already used sign</string>


    <string name="calc_title">Calculator</string>
    <string name="calc_btn_digit_0">ʘ</string>
    <string name="calc_btn_minus">\u2212</string>
    <string name="calc_btn_dot">,</string>
    <string name="calc_btn_square">x²</string>
    <string name="calc_btn_division">/</string>
    <string name="calc_btn_multipli">x</string>
    <string name="calc_btn_percent">%</string>
    <string name="calc_btn_sqrt">√x</string>
    <string name="calc_btn_plus">+</string>
    <string name="calc_btn_pm">\u2213</string>
    <string name="button_ce">CE</string>
    <string name="button_clear">C</string>
    <string name="button_backspace">backspace</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_equal">=</string>
    <string name="butoon_MC">MC</string>
    <string name="button_MR">MR</string>
    <string name="button_M_plus">M+</string>
    <string name="button_M_minus">M-</string>
    <string name="button_MS">MS</string>
    <string name="button_M_tilda">M~</string>
    <string name="button_one_divide_x">1/x</string>
    <!--endregion-->


    <string name="main_game_button">Some Game</string>
    <string name="game_restart">NEW</string>
    <string name="game_undo">Undo</string>
    <string name="game_score">Score\n%d</string>
    <string name="game_best">Best\n%d</string>


    <string name="anim_rotate_trans">Rotate \n + \n Trans</string>
    <string name="anim_rotate">Rotate</string>
    <string name="anim_scale_2">Scale 2 \n p in center position</string>
    <string name="anim_scale">Scale but \n p = x(0)+y(0)</string>
    <string name="anim_fade_in">Fade in</string>
    <string name="main_rates_button">Rates (web)</string>
    <string name="rates_exchange_rate">Exchange rate</string>
    <string name="chat">Chat</string>
    <string name="chat_ctn_send">Send</string>

    <!--endregion-->
</resources>