<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calc_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/calc_background"
    android:orientation="vertical"
    tools:context=".CalcActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc_title"
        android:textAlignment="center"
        android:textColor="@color/calc_result_foreground"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/calc_tv_history"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="end"
        android:textColor="@color/calc_history_foreground"
        android:textSize="24sp"

        tools:text="2 + 3 ="

        />

    <TextView
        android:id="@+id/calc_tv_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="end"
        android:padding="10sp"
        android:textColor="@color/calc_result_foreground"
        android:textSize="28sp"
        tools:text="5"

        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom">

        <TableRow android:layout_height="wrap_content">

            <Button
                style="@null"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/butoon_MC" />

            <Button
                style="@null"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/button_MR" />

            <Button
                style="@null"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/button_M_plus" />

            <Button
                style="@null"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/button_M_minus" />

            <Button
                style="@null"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/button_MS" />

            <Button
                style="@null"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/button_M_tilda" />

        </TableRow>

        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_percent"
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:text="@string/calc_btn_percent"
                android:textColor="@color/calc_button_text_color"

                app:backgroundTint="@null"

                />

            <Button
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:text="@string/button_ce"
                android:textColor="@color/calc_button_text_color"

                app:backgroundTint="@null" />

            <Button
                android:id="@+id/button_clear"
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:text="@string/button_clear"
                android:textColor="@color/calc_button_text_color"

                app:backgroundTint="@null"

                />

            <ImageButton
                android:id="@+id/button_delete"
                style="@style/calc_btn_action"

                android:layout_margin="2sp"
                android:contentDescription="@string/button_backspace"
                android:src="@drawable/ic_backspace"
                app:backgroundTint="@null" />

        </TableRow>

        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:text="@string/button_one_divide_x"

                android:textColor="@color/calc_button_text_color"

                />

            <Button
                android:id="@+id/button_squer"
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:text="@string/calc_btn_square"

                android:textColor="@color/calc_button_text_color" />

            <Button
                android:id="@+id/button_sqrt"
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:text="@string/calc_btn_sqrt"

                android:textColor="@color/calc_button_text_color"

                />

            <Button
                android:id="@+id/button_divide"
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:text="@string/calc_btn_division"

                android:textColor="@color/calc_button_text_color" />
        </TableRow>

        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_7"
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:text="@string/button_7"


                android:textColor="@color/calc_button_text_color"

                />

            <Button
                android:id="@+id/button_8"
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:text="@string/button_8"

                android:textColor="@color/calc_button_text_color" />

            <Button
                android:id="@+id/button_9"
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:text="@string/button_9"

                android:textColor="@color/calc_button_text_color"

                />

            <Button
                android:id="@+id/button_multiply"
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:text="@string/calc_btn_multipli"

                android:textColor="@color/calc_button_text_color" />
        </TableRow>

        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_4"
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:text="@string/button_4"

                android:textColor="@color/calc_button_text_color"

                />

            <Button
                android:id="@+id/button_5"
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:text="@string/button_5"

                android:textColor="@color/calc_button_text_color" />

            <Button
                android:id="@+id/button_6"
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:text="@string/button_6"

                android:textColor="@color/calc_button_text_color"

                />

            <Button
                android:id="@+id/button_minus"
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:text="@string/calc_btn_minus"

                android:textColor="@color/calc_button_text_color" />
        </TableRow>

        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_1"
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:text="@string/button_1"

                android:textColor="@color/calc_button_text_color"

                />

            <Button
                android:id="@+id/button_2"
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:text="@string/button_2"

                android:textColor="@color/calc_button_text_color" />

            <Button
                android:id="@+id/button_3"
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:text="@string/button_3"

                android:textColor="@color/calc_button_text_color"

                />

            <Button

                android:id="@+id/button_plus"
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:text="@string/calc_btn_plus"

                android:textColor="@color/calc_button_text_color" />
        </TableRow>

        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_sogn_toggle"
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:text="@string/calc_btn_pm"

                android:textColor="@color/calc_button_text_color"

                />

            <Button
                android:id="@+id/button_0"
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:text="@string/calc_btn_digit_0"

                android:textColor="@color/calc_button_text_color" />

            <Button
                android:id="@+id/button_dot"
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:text="@string/calc_btn_dot"

                android:textColor="@color/calc_button_text_color"

                />

            <Button
                android:id="@+id/button_equals"
                style="@style/calc_btn_action"
                android:layout_margin="2sp"
                android:backgroundTint="@color/calc_equal_background_button"
                android:text="@string/button_equal"
                android:textColor="@color/calc_button_text_color" />
        </TableRow>

    </TableLayout>


</LinearLayout>