<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    tools:context=".AnimActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/anim_title"
        android:textAlignment="center"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/anim_v_alpha"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/anim_fade_in"
            android:textSize="30sp"
            android:textAlignment="center"
            android:gravity="center"
            style="@style/anim_view"
            android:textColor="@color/game_table_row_views"
            />

        <TextView
            android:id="@+id/anim_v_scale_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/anim_scale"
            android:textSize="30sp"
            android:textAlignment="center"
            android:gravity="center"
            style="@style/anim_view"
            android:textColor="@color/game_table_row_views"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <TextView
            android:id="@+id/anim_v_scale_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/anim_scale_2"
            android:textSize="30sp"
            android:textAlignment="center"
            android:gravity="center"
            style="@style/anim_view"
            android:textColor="@color/game_table_row_views"/>

        <TextView
            android:id="@+id/anim_v_rotate_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/anim_rotate"
            android:textSize="30sp"
            android:textAlignment="center"
            android:gravity="center"
            style="@style/anim_view"
            android:textColor="@color/game_table_row_views"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <TextView
            android:id="@+id/anim_v_trans_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/anim_rotate_trans"
            android:textSize="30sp"
            android:textAlignment="center"
            android:gravity="center"
            style="@style/anim_view"
            android:textColor="@color/game_table_row_views"/>

        <TextView
            android:id="@+id/anim_v_trans_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>