<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".MainActivity">




    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textColor="@color/main_title"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight=".75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintWidth_percent=".70"

        >

        <Button
            android:id="@+id/main_calc_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/main_button_background"
            android:paddingVertical="12dp"
            android:text="@string/main_calc_button"
            android:textColor="@color/main_button_foreground"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@null"


            />
        <Button
            android:id="@+id/main_anim_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/main_button_background"
            android:paddingVertical="12dp"
            android:text="@string/main_anim_button"
            android:textColor="@color/main_button_foreground"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@null"

            />
        <Button
            android:id="@+id/main_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/main_button_background"
            android:paddingVertical="12dp"
            android:text="@string/main_game_button"
            android:textColor="@color/main_button_foreground"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@null"

            />
        <Button
            android:id="@+id/main_rates_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/main_button_background"
            android:paddingVertical="12dp"
            android:text="@string/main_rates_button"
            android:textColor="@color/main_button_foreground"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@null"

            />
        <Button
            android:id="@+id/main_chat_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/main_button_background"
            android:paddingVertical="12dp"
            android:text="@string/chat"
            android:textColor="@color/main_button_foreground"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@null"

            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>