<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/game_main_background"
    tools:context=".GameActivity">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp"
        android:gravity="center_vertical"
        app:layout_constraintHeight_percent="0.35">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="2048"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="55sp" />



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/game_btn_and_score"
                    android:text="@string/game_restart"
                    android:textSize="20sp"/>

                <Button
                    android:id="@+id/game_btn_undo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/game_btn_and_score"
                    android:text="@string/game_undo"
                    android:textSize="20sp"/>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/game_btn_and_score"
                    android:text="@string/game_score"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/game_Best_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/game_btn_and_score"
                    android:textAlignment="center"
                    android:text="@string/game_best"
                    android:textSize="20sp"/>
            </LinearLayout>
    </LinearLayout>

    <GridLayout
        android:id="@+id/game_board"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"
        android:rowCount="4"
        android:columnCount="4"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.55"
        style="@style/game_btn_and_score"
        >
        <!--region 1row-->
        <TextView
            android:id="@+id/game_view_0x0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/game_cell_0"/>
        <TextView
            android:id="@+id/game_view_0x1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/game_cell_0"/>
        <TextView
            android:id="@+id/game_view_0x2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/game_cell_0"/>
        <TextView
            android:id="@+id/game_view_0x3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/game_cell_0"/>
        <!--endregion-->

        <!--region 2row-->
        <TextView
            android:id="@+id/game_view_1x0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/game_cell_0"/>
        <TextView
            android:id="@+id/game_view_1x1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/game_cell_0"/>
        <TextView
            android:id="@+id/game_view_1x2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/game_cell_0"/>
        <TextView
            android:id="@+id/game_view_1x3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/game_cell_0"/>
        <!--endregion-->

        <!--region 3row-->
        <TextView
            android:id="@+id/game_view_2x0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/game_cell_0"/>
        <TextView
            android:id="@+id/game_view_2x1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/game_cell_0"/>
        <TextView
            android:id="@+id/game_view_2x2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/game_cell_0"/>
        <TextView
            android:id="@+id/game_view_2x3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/game_cell_0"/>
        <!--endregion-->

        <!--region 4row-->
        <TextView
            android:id="@+id/game_view_3x0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/game_cell_0"/>
        <TextView
            android:id="@+id/game_view_3x1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/game_cell_0"/>
        <TextView
            android:id="@+id/game_view_3x2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/game_cell_0"/>
        <TextView
            android:id="@+id/game_view_3x3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/game_cell_0"/>
        <!--endregion-->

    </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>